# mercury_gve

./: .gitignore  README.md  pyproject.toml  requirements.txt
merc_gve/: default.settings.py  main.py  test.py
merc_gve/database/: __init__.py  mercury.py
merc_gve/dto/: __init__.py  mercury.py
merc_gve/handler/: __init__.py  command.py  mercury_subscribe.py  mercury_vetdoc.py
merc_gve/services/: user.py
merc_gve/services/mercury/: aioparser.py  aioparser_db.py  base_session.py  my_excel.py  parser.py  state_number_parser.py
merc_gve/services/telegram/: message_maker.py  states.py  task.py
merc_gve/types/: __init__.py  mercury.py
test/: test_parse_state_number.py
