[tool.poetry]
name = "merc_gve"
version = "0.1.0"
description = "mercury"
authors = ["prip"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
html5lib = "^1.1"
lxml = "^4.9.1"
requests = "^2.28.1"
bs4 = "^0.0.1"
aiogram = "^2.22.1"
aioschedule = "^0.5.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
